// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should render 1`] = `
<Badge
  className="tag text-sm px-3 py-1"
  isPill={true}
  theme="dark"
>
  <div
    className="d-flex align-items-center"
  >
    Social For Good
  </div>
</Badge>
`;

exports[`<Tag /> should render with a remove Icon 1`] = `
<Badge
  className="tag text-sm px-3 py-1"
  isPill={true}
  theme="dark"
>
  <div
    className="d-flex align-items-center"
  >
    Social For Good
    <Icon
      className="tag__remove-icon cursor-pointer"
      data-test-id="tag-remove-icon"
      name="close"
      onClick={[MockFunction]}
    />
  </div>
</Badge>
`;
